--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     tools:layout_editor_absoluteY="81dp">
 
     <LinearLayout
+        android:layout_marginTop="45sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -21,15 +22,21 @@
             android:layout_width="180sp"
             android:layout_height="184dp"
             app:srcCompat="@drawable/logo" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="14sp"
+            android:fontFamily="sans-serif"
+            android:shadowColor="#40000000"
+            android:shadowDx="0"
+            android:shadowDy="9"
+            android:shadowRadius="4"
             android:text="@string/title"
             android:textAlignment="center"
             android:textColor="@color/cardview_light_background"
-            android:textSize="45sp"
-            android:layout_centerHorizontal="true"
-            />
+            android:textSize="45sp" />
 
     </LinearLayout>
 
