--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     tools:layout_editor_absoluteY="81dp">
 
     <LinearLayout
-        android:layout_marginTop="45sp"
+        android:layout_marginTop="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -19,15 +19,15 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="180sp"
-            android:layout_height="184dp"
+            android:layout_width="125sp"
+            android:layout_height="125dp"
             app:srcCompat="@drawable/logo" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="14sp"
+            android:layout_marginTop="7sp"
             android:fontFamily="sans-serif"
             android:shadowColor="#40000000"
             android:shadowDx="0"
@@ -36,7 +36,9 @@
             android:text="@string/title"
             android:textAlignment="center"
             android:textColor="@color/cardview_light_background"
-            android:textSize="45sp" />
+            android:textSize="35sp"
+            android:textStyle="bold"
+            />
 
     </LinearLayout>
 
