--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
             android:layout_width="125sp"
             android:layout_height="125dp"
             android:layout_marginTop="45sp"
+            android:contentDescription="@string/title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -34,7 +35,7 @@
             android:shadowRadius="4"
             android:text="@string/title"
             android:textAlignment="center"
-            android:textColor="@color/cardview_light_background"
+            android:textColor="@android:color/white"
             android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,22 +43,41 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="55sp"
 
+            android:layout_marginTop="55sp"
             app:layout_constraintTop_toBottomOf="@+id/textView">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@drawable/fields"
                 android:layout_marginLeft="11sp"
                 android:layout_marginRight="11sp"
-                android:paddingLeft="10sp"
-                android:hint="+ 7 (____) ___-__-__"
+                android:background="@drawable/fields"
+                android:hint="@string/title"
 
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"
                 android:textColorHint="@android:color/black" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="50sp"
+                android:layout_marginLeft="11sp"
+                android:layout_marginRight="11sp"
+                android:background="@drawable/fields"
+                android:hint="@string/title"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
