--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:text="Номер телефона"
+        android:text="@string/phone_number"
         android:textColor="@color/backColor"
         app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
         app:layout_constraintStart_toStartOf="parent" />
@@ -57,8 +57,8 @@
         android:layout_marginTop="84dp"
         android:background="@drawable/fields"
         android:ems="10"
-
-        android:hint="+7 (___) ___-__-__"
+        android:autofillHints="phone"
+        android:hint="@string/phone_mask"
         android:inputType="phone"
         android:textColor="@color/textColor"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:text="Пароль"
+        android:text="@string/pass"
         android:textColor="@color/backColor"
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintStart_toStartOf="parent" />
@@ -83,9 +83,10 @@
         android:layout_marginTop="60dp"
         android:background="@drawable/fields"
         android:ems="10"
-        android:hint="* * * * * * * *"
+        android:hint="@string/pass_mask"
         android:inputType="textPassword"
         android:textColor="@color/textColor"
+        android:autofillHints="password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />
@@ -96,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="53dp"
         android:background="@drawable/whitebuttonstyle"
-        android:text="Войти"
+        android:text="@string/login"
         android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,7 +110,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginBottom="580dp"
-        android:text="Button"
+        android:text="@string/phone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -120,6 +121,7 @@
         android:layout_height="0sp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:autofillHints="username"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintStart_toStartOf="parent"
