--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="125sp"
+        android:layout_width="125dp"
         android:layout_height="125dp"
-        android:layout_marginTop="45sp"
+        android:layout_marginTop="40dp"
         android:contentDescription="@string/title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
         android:id="@+id/phoneNumber"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="75dp"
         android:autofillHints="phone"
         android:background="@drawable/fields"
         android:ems="10"
@@ -79,7 +79,7 @@
         android:id="@+id/password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:autofillHints="password"
         android:background="@drawable/fields"
         android:ems="10"
@@ -135,8 +135,8 @@
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15sp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="36dp"
         android:text="@string/reg"
         android:textColor="@color/backColor"
         android:textSize="18sp"
