--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
         android:id="@+id/phoneNumber"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="65dp"
         android:autofillHints="phone"
         android:background="@drawable/fields"
         android:ems="10"
@@ -97,10 +97,8 @@
         android:layout_marginTop="53dp"
         android:background="@drawable/whitebuttonstyle"
         android:fontFamily="@font/roboto_medium"
-        android:shadowColor="#40000000"
-        android:shadowDx="0"
-        android:shadowDy="9"
-        android:shadowRadius="4"
+        android:elevation="3dp"
+        android:translationZ="4dp"
         android:text="@string/login"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp"
