--- a/app/src/main/res/layout/fragment_finished_orders.xml
+++ b/app/src/main/res/layout/fragment_finished_orders.xml
@@ -3,5 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FinishedOrdersFragment"
-    android:background="#FF0000"/>
+    tools:context=".FinishedOrdersFragment" >
+
+    <ListView
+        android:id="@+id/finishedOrdersList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</FrameLayout>
