--- a/app/src/main/res/layout/fragment_active_orders.xml
+++ b/app/src/main/res/layout/fragment_active_orders.xml
@@ -3,5 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActiveOrdersFragment"
-    android:background="#00FF00"/>
+    tools:context=".ActiveOrdersFragment" >
+
+    <ListView
+        android:id="@+id/activeOrdersList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</FrameLayout>
