--- a/app/src/main/res/layout/activity_forgetpass.xml
+++ b/app/src/main/res/layout/activity_forgetpass.xml
@@ -120,12 +120,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:background="@drawable/whitebuttonstyle"
+        android:background="@drawable/notenabledbutton"
         android:elevation="3dp"
         android:enabled="false"
         android:fontFamily="@font/roboto_medium"
         android:text="@string/code"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/inactiveColor"
         android:textSize="18sp"
         android:translationZ="4dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -137,12 +137,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:background="@drawable/whitebuttonstyle"
+        android:background="@drawable/notenabledbutton"
         android:elevation="3dp"
         android:enabled="false"
         android:fontFamily="@font/roboto_medium"
         android:text="Обновить пароль"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/inactiveColor"
         android:textSize="18sp"
         android:translationZ="4dp"
         app:layout_constraintEnd_toEndOf="parent"
