--- a/app/src/main/res/layout/activity_forgetpass.xml
+++ b/app/src/main/res/layout/activity_forgetpass.xml
@@ -103,7 +103,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:autofillHints="password"
+        android:autofillHints="@string/codeMask"
         android:background="@drawable/fields"
         android:ems="10"
         android:hint="@string/pass_mask"
